# switchy_api/src/routes/loginRoutes.ts
@@ -1,6 +1,7 @@
 import { Router } from "express";
 import LoginController from "../controllers/loginController";
 import UserController from "../controllers/userController";
+import { Smtp } from "../services/smtp/smtp";
 
 const loginRoutes = Router();
 const controller = new LoginController();
@@ -23,13 +24,28 @@ loginRoutes.post("/SignUp", (request, response) => {
     return userController.signUp(request, response);
 });
 
-loginRoutes.post('/RefreshToken', (req, res) => {
+loginRoutes.post("/RefreshToken", (req, res) => {
     // #swagger.tags = ['Login']
     // #swagger.responses[200] = { description: 'Ok.' }
     // #swagger.responses[400] = { description: 'Bad Request.' }
     // #swagger.responses[403] = { description: 'Forbidden.' }
     // #swagger.responses[500] = { description: 'Internal Server Error.' }
     return controller.refreshToken(req, res);
+});
+
+loginRoutes.post("/ResetPassword", async (req, res) => {
+    // #swagger.tags = ['Login']
+    // #swagger.responses[200] = { description: 'Ok.' }
+    // #swagger.responses[400] = { description: 'Bad Request.' }
+    // #swagger.responses[403] = { description: 'Forbidden.' }
+    // #swagger.responses[500] = { description: 'Internal Server Error.' }
+    const smtp = new Smtp();
+    await smtp.sendEmail(
+        "jonh@doe.com",
+        "Subject",
+        "message"
+    );
+     res.status(200).send();
 });
 
 export default loginRoutes;
