# switchy_api/swagger_output.json
@@ -136,6 +136,28 @@
         }
       }
     },
+    "/Login/ResetPassword": {
+      "post": {
+        "tags": [
+          "Login"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "Ok."
+          },
+          "400": {
+            "description": "Bad Request."
+          },
+          "403": {
+            "description": "Forbidden."
+          },
+          "500": {
+            "description": "Internal Server Error."
+          }
+        }
+      }
+    },
     "/User/Info": {
       "get": {
         "tags": [
